@@ -1,3 +1,5 @@
+- Refactor: Replace usage of RegistrationStateType by RegistrationStateTypeEnum
+
 6.27.6 (31-08-2022)
 - Refactor: Make compatible with fenixedu-academic-core v34.2.0
 
